# Mahjoub_Online_WebApp

./: .gitignore  Aptfile  Dockerfile  Procfile  README.md  archive_manager.py  config.py  create_wallets_for_old_suppliers.py  init_db.py  inject_admin.py  nixpacks.toml  pyproject.toml  requirements.txt  robots.txt  run.py  run.sh  runtime.txt  seed_admin.py  seed_db.py  setup_supplier.py  vercel.json
admin_panel/: __init__.py  _init__.py  add_supplier_routes.py  admin_routes.py  auth.py  auth_controller.py  auth_logic.py  manage_suppliers.py  models.py  routes.py  staff_routes.py  supplier_service_routes.py  suppliers_logic.py  suppliers_routes.py
admin_panel/engines/: logistics_engine.py  supplier_engine.py
admin_panel/templates/: add_supplier.html  base.html  dashboard.html  login.html  manage_suppliers.html  product_detail.html  product_review.html  wallets.html  withdraw_requests.html
api/: index.py  webhook.py
app/models/: supplier_db.py
apps/: __init__.py  extensions.py
apps/ admin_dashboard/: routes.py
apps/add_supplier/: __init__.py  routes.py
apps/admin_Product/: registry.py  routes.py  routes_add.py  routes_edit.py  routes_min_review_products.py  routes_sync.py
apps/admin_dashboard/: __init__.py  registry.py  routes.py
apps/admin_exchange/: registry.py  routes.py
core/: __init__.py  config.py  currency_engine.py  models.py  qumra_connector.py  security.py
migrations/: env.py
models/: admin_db.py  supplier_db.py
services/: qumra_handler.py  wallet_service.p
supplier_panel/: __init__.py  auth_logic.py  decorators.py  routes.py
(+221 files in other folders)
